<package format="2">

  <name>radiation_utils</name>
  <version>0.0.1</version>
  <description>This package contains the necessary computational geometry for simulating ionizing radiation for robotic applications.</description>
  <maintainer email="stibipet@fel.cvut.cz">Petr Štibinger</maintainer>
  <author>Petr Štibinger</author>
  <license>GPLv3</license>

  <!--################################-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
