<package format="2">

  <name>radiation_utils</name>
  <version>0.0.1</version>
  <description>Physics calculations for radiation source simulations and localization. Geometry and graphics has been merged into mrs_lib</description>
  <maintainer email="stibipet@fel.cvut.cz">Petr Štibinger</maintainer>
  <author>Petr Štibinger</author>
  <license>GPLv3</license>

  <!--################################-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>

</package>
