<?xml version="1.0"?>
<package format="2">

  <name>rad_utils</name>
  <version>0.0.1</version>

  <description>TODO</description>

  <author email="stibipet@fel.cvut.cz">Petr Stibinger</author>
  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <author>Petr Stibinger</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>rad_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
  </export>

</package>
